# sqlite-cli-demo

./: Cargo.toml
src/: app.rs  define_table.rs  display.rs  insert_row.rs  lib.rs  main.rs  utils.rs
