[package]
name = "sqlite"
version = "0.1.0"
authors = ["kmilewczyk <kmilewczyk96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.20.0"
prettytable-rs = "0.8.0"
console = "0.9.1"
dialoguer = "0.5.0"
enum-primitive-derive = "^0.1"
num-traits = "^0.1"
regex = "^1.3"
lazy_static = "^1.4"
